--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,18 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "ipfs-http-client": "^60.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web3": "^1.8.2"
+    "react-router-dom": "^6.10.0",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
