--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
+    "babel-eslint": "^10.1.0",
     "ipfs-http-client": "^60.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
